# konsol-2024-test-actions

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  endpoints.md  flake.nix  nginx.conf  package-lock.json
.github/workflows/: docker-frontends.yml  rust.yml
admin-frontend/: .env  package-lock.json  package.json  vite.config.ts
admin-frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
admin-frontend/src/components/: Header.tsx  Main.tsx  NavHeader.tsx  NewSlide.tsx  Slide.tsx  SlidesView.tsx  User.tsx  UserStatus.tsx
admin-frontend/src/pages/: AccessDeniedPage.tsx  LoadingPage.tsx  NotAllowedPage.tsx  NotLoggedInPage.tsx  SlidesPage.tsx  UsersPage.tsx
admin-frontend/src/styles/: App.css  Header.css  Main.css  NavHeader.css  Slide.css  SlidePage.css  SlidesPage.css  User.css  UsersPage.css
admin-frontend/src/util/: utils.tsx
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/2024-12-12-181858_create_slides/: down.sql  up.sql
backend/migrations/2025-04-15-091507_create_emails/: up.sql
backend/migrations/2025-04-15-091507_create_users/: up.sql
backend/migrations/2025-10-02-181137_create_settings/: up.sql
backend/scripts/: add_authenticated_user.py  mock_data.py
backend/src/: actions.rs  auth.rs  fs_helpers.rs  main.rs  models.rs  routes.rs  schema.rs
docker-scripts/: add_authenticated_user_docker.sh
screen-frontend/: README.md  package-lock.json  package.json  vite.config.ts
screen-frontend/src/: App.css  App.tsx  index.css  types.ts
screen-frontend/src/@types/: settings.d.ts
screen-frontend/src/components/: App.tsx  SlList.tsx  Slideshow.tsx
(+20 files in other folders)
