[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["sqlite", "r2d2", "uuid", "chrono", "serde_json"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = {version = "1", features = ["derive"]}
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
actix-multipart = "0.7.2"
actix-cors = "0.7.0"
actix-files = "0.6.6"
